# voiceideas

./: .dockerignore  .env.docker.example  .gitignore  .vercelignore  ANDROID_BUILD.md  DOCKER_SETUP.md  Dockerfile  IOS_BUILD.md  SUPABASE_SETUP.md  VOICEIDEAS_TEMP_LINK_HOTFIX.md  capacitor.config.ts  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
android/: capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
patches/: @capgo+capacitor-audio-recorder+8.0.12.patch
public/: manifest.json  sw.js
scripts/: android-prepare.sh  check-security-surface.mjs  check-sensitive-functions-jwt.mjs  docker-bootstrap.sh  docker-deploy.sh  supabase-deploy-functions.sh  supabase-link.sh  supabase-push-secrets.sh  sync-desktop-artifacts.mjs  sync-mobile-icons.mjs  sync-native-web.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AuthGate.tsx  BardoConnectionToggle.tsx  FolderBar.tsx  IdeaBridgeExportButton.tsx  InstallBanner.tsx  Layout.tsx  NoteCard.tsx  NotesList.tsx  OrganizePanel.tsx  OrganizedView.tsx  SafeCaptureBridgeExportPanel.tsx  SendToBardoModal.tsx  ShareIdeaModal.tsx  StatusBanner.tsx  TagCloudPanel.tsx  VoiceIdeasIcons.tsx  VoiceRecorder.tsx
src/context/: integrationSettingsContext.ts  (+1 more)
supabase/: bridge_smoke_v5.sql  bridge_verify_e2e.sql  config.toml  setup.sql
(+149 files in other folders)
